--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0;url=main.html">
   <title>메인 페이지</title>
   <link rel="stylesheet" href="style.css">
 </head>
