--- a/index.html
+++ b/index.html
@@ -1,51 +1,34 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0;url=main.html">
-  <title>메인 페이지</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>경기도의회 상임위원회 배정</title>
+    <!-- Google Fonts 링크 추가 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <h1>경기마루 키오스크 메인</h1>
-  </header>
+<header>
+    <h1>나와 어울리는 경기도의회 상임위원회 찾기</h1>
+</header>
 
-  <main>
-    <p>경기도의회의정관 경기마루에 오신 것을 환영합니다!<br>아래에서 원하는 메뉴를 선택하세요.</p>
-    <div class="game-links">
-      <a href="ox_quiz.html" class="game-button">경기도의회<br>OX 퀴즈</br>🏆⭕❌</a>
-      <a href="gyeonggi_game\index.html" class="game-button-2">나와 어울리는<br>경기도의회<br>상임위원회 찾기</a>
-      <a href="manner\manner.html" class="game-button-2">경기마루<br>전시관람예절</a>
-      <!-- 경기도의회 SNS 버튼: 클릭 시 모달창 열기 -->
-      <a href="#" class="game-button" onclick="openSnsModal()">경기도의회<br>SNS 둘러보기<br>📱🔍</a>
-          <!-- 추후 다른 게임 추가 시, 여기서 링크를 덧붙이면 됩니다. -->
+    <div class="container">
+        <p>경기마루에 오신 여러분을 진심으로 환영합니다!👏😊<br>여러분들은 오늘 1일 도의원이 되어, 제11대 경기도의회의 13개 상임위원회 중 하나의 위원회에 참여하게 됩니다. <br/>다음 질문에 답해주시는 여러분에게 적합한 상임위원회를 추천해드리겠습니다.</p>
+        
+        <!-- ✅ 기존 button-container를 활용하여 중앙 정렬 -->
+        <div class="button-container">
+            <button id="start-button" onclick="location.href='quiz.html'">게임 시작하기</button>
+        </div>
+
+        <p><span style="font-size: 1rem;">모든 제시문은 ChatGPT를 활용하여 제작되었습니다.🛠️</span></p>
     </div>
-    <p><br>이 웹페이지는 ChatGPT를 활용하여 제작되었습니다.🛠️</p>
-  </main>
 
-  <footer>
-    <p> © 2025 경기도의회의정관 경기마루 </br> 언론홍보담당관 의정정보서비스팀</p>
-  </footer>
+<footer>
+    <button class="footer" onclick="location.href='../main.html' ">메인으로 돌아가기</button>
+</footer>
 
-  <!-- SNS 모달창 영역 (ID/CLASS 모두 snsModal로 명명) -->
-  <div id="snsModalOverlay" class="sns-modal-overlay" style="display: none;">
-    <div class="sns-modal-content">
-      <!-- 닫기 버튼 -->
-      <button class="sns-modal-close-btn" onclick="closeSnsModal()">×</button>
-
-      <!-- iframe: 실제 SNS나 외부 페이지를 임베드 --> <!--모달창 크기 조정 하려면 width랑 height 수치 조정-->
-      <iframe id="snsIframe" 
-        src="https://blog.naver.com/PostList.nhn?blogId=gassembly&from=postList&categoryNo=42" 
-        width="100%" height="1000" frameborder="0" sandbox="allow-scripts allow-same-origin"></iframe>
-
-      <!-- 처음 화면으로 돌아가기 버튼 -->
-      <div class="sns-button-container">
-        <button onclick="resetSNSPage()">SNS 메인으로 돌아가기</button>
-      </div>
-    </div>
-  </div>
-
-  <script src="script.js"></script>
 </body>
 </html>
